// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings Pane should render Default properly 1`] = `
<RightPaneForm
  formError=""
  isExecuting={false}
  onSubmit={[Function]}
  submitButtonText="Apply"
>
  <div
    className="paneMainContent"
  >
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <fieldset>
          <legend
            className="settingsSectionLabel legendLabel"
            id="pageOptions"
          >
            Page Options
          </legend>
          <InfoTooltip>
            Choose Custom to specify a fixed amount of query results to show, or choose Unlimited to show as many query results per page.
          </InfoTooltip>
          <StyledChoiceGroup
            ariaLabelledBy="pageOptions"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "key": "custom",
                  "text": "Custom",
                },
                Object {
                  "key": "unlimited",
                  "text": "Unlimited",
                },
              ]
            }
            selectedKey="custom"
            styles={
              Object {
                "flexContainer": Array [
                  Object {
                    "selectors": Object {
                      ".ms-ChoiceField": Object {
                        "marginTop": 0,
                      },
                      ".ms-ChoiceField-wrapper label": Object {
                        "fontSize": 12,
                        "paddingTop": 0,
                      },
                      ".ms-ChoiceFieldGroup root-133": Object {
                        "clear": "both",
                      },
                    },
                  },
                ],
                "root": Object {
                  "clear": "both",
                },
              }
            }
          />
        </fieldset>
      </div>
      <div
        className="tabs settingsSectionPart"
      >
        <div
          className="tabcontent"
        >
          <div
            className="settingsSectionLabel"
          >
            Query results per page
            <InfoTooltip>
              Enter the number of query results that should be shown per page.
            </InfoTooltip>
          </div>
          <StyledSpinButton
            ariaLabel="Custom query items per page"
            className="textfontclr"
            decrementButtonAriaLabel="Decrease value by 1"
            incrementButtonAriaLabel="Increase value by 1"
            min={1}
            onDecrement={[Function]}
            onIncrement={[Function]}
            onValidate={[Function]}
            step={1}
            value="0"
          />
        </div>
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div>
          <legend
            className="settingsSectionLabel legendLabel"
            id="queryTimeoutLabel"
          >
            Query Timeout
          </legend>
          <InfoTooltip>
            When a query reaches a specified time limit, a popup with an option to cancel the query will show unless automatic cancellation has been enabled
          </InfoTooltip>
        </div>
        <div>
          <StyledToggleBase
            defaultChecked={false}
            label="Enable query timeout"
            onChange={[Function]}
            styles={
              Object {
                "container": Object {},
                "label": Object {
                  "display": "block",
                  "fontSize": 12,
                  "fontWeight": 400,
                },
                "pill": Object {},
                "root": Object {},
                "text": Object {},
                "thumb": Object {},
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Retry Settings
          <InfoTooltip>
            Retry policy associated with throttled requests during CosmosDB queries.
          </InfoTooltip>
        </div>
        <StyledSpinButton
          decrementButtonAriaLabel="Decrease value by 1"
          incrementButtonAriaLabel="Increase value by 1"
          label="Max retry attempts"
          labelPosition={0}
          min={1}
          onChange={[Function]}
          onDecrement={[Function]}
          onIncrement={[Function]}
          onValidate={[Function]}
          step={1}
          styles={
            Object {
              "arrowButtonsContainer": Object {},
              "icon": Object {},
              "input": Object {},
              "label": Object {
                "fontSize": 12,
                "fontWeight": 400,
              },
              "labelWrapper": Object {},
              "root": Object {
                "paddingBottom": 10,
              },
              "spinButtonWrapper": Object {},
            }
          }
          value="9"
        />
        <StyledSpinButton
          decrementButtonAriaLabel="Decrease value by 1000"
          incrementButtonAriaLabel="Increase value by 1000"
          label="Fixed retry interval (ms)"
          labelPosition={0}
          min={1000}
          onChange={[Function]}
          onDecrement={[Function]}
          onIncrement={[Function]}
          onValidate={[Function]}
          step={1000}
          styles={
            Object {
              "arrowButtonsContainer": Object {},
              "icon": Object {},
              "input": Object {},
              "label": Object {
                "fontSize": 12,
                "fontWeight": 400,
              },
              "labelWrapper": Object {},
              "root": Object {
                "paddingBottom": 10,
              },
              "spinButtonWrapper": Object {},
            }
          }
          value="5000"
        />
        <StyledSpinButton
          decrementButtonAriaLabel="Decrease value by 1"
          incrementButtonAriaLabel="Increase value by 1"
          label="Max wait time (s)"
          labelPosition={0}
          min={1}
          onChange={[Function]}
          onDecrement={[Function]}
          onIncrement={[Function]}
          onValidate={[Function]}
          step={1}
          styles={
            Object {
              "arrowButtonsContainer": Object {},
              "icon": Object {},
              "input": Object {},
              "label": Object {
                "fontSize": 12,
                "fontWeight": 400,
              },
              "labelWrapper": Object {},
              "root": Object {
                "paddingBottom": 10,
              },
              "spinButtonWrapper": Object {},
            }
          }
          value="30"
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Enable container pagination
          <InfoTooltip>
            Load 50 containers at a time. Currently, containers are not pulled in alphanumeric order.
          </InfoTooltip>
        </div>
        <StyledCheckboxBase
          ariaLabel="Enable container pagination"
          checked={false}
          className="padding"
          onChange={[Function]}
          styles={
            Object {
              "label": Object {
                "padding": 0,
              },
            }
          }
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Enable cross-partition query
          <InfoTooltip>
            Send more than one request while executing a query. More than one request is necessary if the query is not scoped to single partition key value.
          </InfoTooltip>
        </div>
        <StyledCheckboxBase
          ariaLabel="Enable cross partition query"
          checked={false}
          className="padding"
          onChange={[Function]}
          styles={
            Object {
              "label": Object {
                "padding": 0,
              },
            }
          }
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Max degree of parallelism
          <InfoTooltip>
            Gets or sets the number of concurrent operations run client side during parallel query execution. A positive property value limits the number of concurrent operations to the set value. If it is set to less than 0, the system automatically decides the number of concurrent operations to run.
          </InfoTooltip>
        </div>
        <StyledSpinButton
          ariaLabel="Max degree of parallelism"
          className="textfontclr"
          id="max-degree"
          min={-1}
          onDecrement={[Function]}
          onIncrement={[Function]}
          onValidate={[Function]}
          role="textbox"
          step={1}
          value="6"
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Explorer Version
        </div>
        <div />
      </div>
    </div>
  </div>
</RightPaneForm>
`;

exports[`Settings Pane should render Gremlin properly 1`] = `
<RightPaneForm
  formError=""
  isExecuting={false}
  onSubmit={[Function]}
  submitButtonText="Apply"
>
  <div
    className="paneMainContent"
  >
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Retry Settings
          <InfoTooltip>
            Retry policy associated with throttled requests during CosmosDB queries.
          </InfoTooltip>
        </div>
        <StyledSpinButton
          decrementButtonAriaLabel="Decrease value by 1"
          incrementButtonAriaLabel="Increase value by 1"
          label="Max retry attempts"
          labelPosition={0}
          min={1}
          onChange={[Function]}
          onDecrement={[Function]}
          onIncrement={[Function]}
          onValidate={[Function]}
          step={1}
          styles={
            Object {
              "arrowButtonsContainer": Object {},
              "icon": Object {},
              "input": Object {},
              "label": Object {
                "fontSize": 12,
                "fontWeight": 400,
              },
              "labelWrapper": Object {},
              "root": Object {
                "paddingBottom": 10,
              },
              "spinButtonWrapper": Object {},
            }
          }
          value="9"
        />
        <StyledSpinButton
          decrementButtonAriaLabel="Decrease value by 1000"
          incrementButtonAriaLabel="Increase value by 1000"
          label="Fixed retry interval (ms)"
          labelPosition={0}
          min={1000}
          onChange={[Function]}
          onDecrement={[Function]}
          onIncrement={[Function]}
          onValidate={[Function]}
          step={1000}
          styles={
            Object {
              "arrowButtonsContainer": Object {},
              "icon": Object {},
              "input": Object {},
              "label": Object {
                "fontSize": 12,
                "fontWeight": 400,
              },
              "labelWrapper": Object {},
              "root": Object {
                "paddingBottom": 10,
              },
              "spinButtonWrapper": Object {},
            }
          }
          value="5000"
        />
        <StyledSpinButton
          decrementButtonAriaLabel="Decrease value by 1"
          incrementButtonAriaLabel="Increase value by 1"
          label="Max wait time (s)"
          labelPosition={0}
          min={1}
          onChange={[Function]}
          onDecrement={[Function]}
          onIncrement={[Function]}
          onValidate={[Function]}
          step={1}
          styles={
            Object {
              "arrowButtonsContainer": Object {},
              "icon": Object {},
              "input": Object {},
              "label": Object {
                "fontSize": 12,
                "fontWeight": 400,
              },
              "labelWrapper": Object {},
              "root": Object {
                "paddingBottom": 10,
              },
              "spinButtonWrapper": Object {},
            }
          }
          value="30"
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Enable container pagination
          <InfoTooltip>
            Load 50 containers at a time. Currently, containers are not pulled in alphanumeric order.
          </InfoTooltip>
        </div>
        <StyledCheckboxBase
          ariaLabel="Enable container pagination"
          checked={false}
          className="padding"
          onChange={[Function]}
          styles={
            Object {
              "label": Object {
                "padding": 0,
              },
            }
          }
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Display Gremlin query results as: 
          <InfoTooltip>
            Select Graph to automatically visualize the query results as a Graph or JSON to display the results as JSON.
          </InfoTooltip>
        </div>
        <StyledChoiceGroup
          aria-label="Graph Auto-visualization"
          onChange={[Function]}
          options={
            Array [
              Object {
                "key": "false",
                "text": "Graph",
              },
              Object {
                "key": "true",
                "text": "JSON",
              },
            ]
          }
          selectedKey="false"
        />
      </div>
    </div>
    <div
      className="settingsSection"
    >
      <div
        className="settingsSectionPart"
      >
        <div
          className="settingsSectionLabel"
        >
          Explorer Version
        </div>
        <div />
      </div>
    </div>
  </div>
</RightPaneForm>
`;
